--- a/action.yml
+++ b/action.yml
@@ -8,6 +8,7 @@ inputs:
     default: 'my-document'
   output_bool:
     description: 'Upload PDF to repo?'
+    type: bool
     required: true
     default: true
   output_dir:
