--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,7 @@ inputs:
     default: 'my-document'
   output_bool:
     description: 'Upload PDF to repo?'
-    type: bool
+    type: boolean
     required: true
     default: true
   output_dir:
